<resources>
    <string name="cDescription" />
    <string name="app_name">Ai-Di</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refertext">Refer your friend and family members and earn ₹ 500 Bonus + 1000 codes ( ₹ 170) Totally ₹ 670/- instantly in wallet</string>
    <string name="make_payment"><u>Make Payment</u></string>
    <string-array name="categories">
        <item>I want to refer friend</item>
        <item>App issue</item>
        <item>Withdrawal not received</item>
        <item>Refer bonus not received</item>
        <item>Others</item>
    </string-array>
    <string name="strUsername">USERNAME</string>
    <string name="create_new_account"><u>Create new account</u></string>
    <string name="forgot_password_underline"><u>Forgot password</u></string>
    <string name="watch_demo"><u>Watch Demo</u></string>
    <string name="staticDate">01–01–2000</string>
    <string name="lblImage">Image</string>
    <string name="lblAudio">Audio</string>
    <string name="lblVideo">Video</string>
    <string name="lblDocument">Document</string>
    <string name="lblContact">Contact</string>
    <string name="lblLocation">Location</string>
    <string name="lblVoiceRecording">Voice recording</string>
    <string name="msgNoMessage">No message!</string>
    <string name="terms"><u>I have read and agreed to the job details and terms &amp; conditions.</u></string>
    <string name="admob_app_id">ca-app-pub-7994561209093816~7613407342</string>
    <string name="strAboutStatus">Hey! How are you?</string>
    <string name="strTypeYourMessage">Type your message</string>
    <string name="strSlideToCancel">Slide To Cancel</string>
    <string name="only_admin_can_send_messages"><![CDATA[Only <strong><font color=#2196F3>admin</font></strong> can send messages]]></string>
    <string name="staticTime">01:01 AM</string>
    <string name="staticJPG">JPG</string>
    <string name="msgInvalidOrCorruptFile">Document File</string>
    <string name="lblInvite">Invite</string>
    <string name="staticSize">123 KB</string>
    <string name="strZeroTimer">00:00:00 / 00:00:00</string>
    <string name="staticTimeZero">00:00</string>
    <string name="msgFileNotFound">File not found!</string>
    <string name="strTyping">typing…</string>
    <string name="msgFailedToUpload">Failed to upload!</string>
    <string name="msgNoImageSelected">No Image selected!</string>
    <string name="msg_image_upload">Uploading…</string>
    <string name="msgChooseFileFromOtherLocation">Kindly choose file from proper location</string>
    <string name="strOnline">Online</string>
    <string name="strOffline">Offline</string>
    <string name="recording_cancelled">Recording cancelled</string>
    <string name="choose_contact">Select a contact</string>
    <string name="choose_file">Select a file</string>
    <string name="strYouHaveNoChat">Looks like you haven\'t initiated a conversion</string>
    <string name="strOneCount">9</string>
    <string name="strUsernameSmall">Username</string>
    <string name="authority">Authority</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="key_maps"></string>
    <string name="strShareContent">I would like to share Amazing App with you. You can download this application from playstore easily.</string>
    <string name="strChats">Chats</string>
    <string name="strYou">You</string>
    <string name="strNoChatCreated">No messages yet!</string>
    <string name="msgUploadInProgress">Upload in progress!</string>
    <string name="msgWaitingForFile">Please wait to receive file…</string>
    <string name="strPhotoSent">Tap to view photo sent by %1$s</string>
    <string name="msgFileTooBig">File is too big (max = %1$dMB)</string>
    <string name="lblZeroPercentage">0 %</string>
    <string name="strNewMessage">New Message</string>
    <string name="recording">Recording…</string>
    <string name="msgDownloadingStarted">Downloading started</string>
    <string name="msgDownloadFile">Downloading %1$s</string>
    <string name="strEmptyMsg">You can\'t send empty message</string>
    <string name="repayment_list">Repayment List</string>
    <string name="sync_now">Sync Now</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="today_codes">Today Codes</string>
    <string name="total_codes">Total Codes</string>
    <string name="working_days">Working Days</string>
    <string name="worked_days">Worked Days</string>
    <string name="institute_name">Institute  Name</string>
    <string name="abcd_high_school">ABCD High School</string>
    <string name="roll_number">Roll Number</string>
    <string name="student_name">Student Name</string>
    <string name="create">Create</string>
    <string name="get_link">Get Link</string>
    <string name="nandha">Nandha</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="id_card_created_successfully">ID Card Created Successfully</string>
    <string name="back">Back</string>
    <string name="abcd_40_days_plan_2999">ABCD 40 Days Plan (₹ 2999)</string>
    <string name="per_code">Per Code</string>
    <string name="per_month_earning">Per Month Earning</string>
    <string name="monthly_target">Monthly Target</string>
    <string name="activate_plan">Activate Plan</string>
    <string name="activate_pla_99">Activate Grow Plan</string>
    <string name="total_data">Total Data</string>
    <string name="today_data">Today Data</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="withdrawal_history">Withdrawal History</string>
    <string name="transaction_history">Transaction History</string>
    <string name="my_profile">My Profile</string>
    <string name="set_password">Set Password</string>
    <string name="update_bank_detail">Update Bank Detail</string>
    <string name="update_profile_detail">Update Profile Detail</string>
    <string name="my_bank_account">My Bank Account</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="account_number">Account Number</string>
    <string name="enter_account_number">Enter account number</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="enter_account_holder_name">Enter account holder name</string>
    <string name="bank_name">Bank Name</string>
    <string name="enter_bank_name">Enter bank name</string>
    <string name="enter_branch">Enter branch</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="enter_ifsc_code">Enter IFSC code</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="update_password">Update Password</string>
    <string name="please_wait">Please Wait...</string>
    <string name="city">City</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="earning_wallet">Earning Wallet</string>
    <string name="bonus_wallet">Bonus Wallet</string>
    <string name="add_to_main_balance">Add to main balance</string>
    <string name="plan_activate">Plan Activate</string>
    <string name="referral_income">Total Refer Income</string>
    <string name="total_earning">Total Earning</string>
    <string name="today_s_earning">Today\'s Earning</string>
    <string name="_1_click_on_below_link_complete_the_payment"><![CDATA[1. Click On Below Link & Complete The Payment]]></string>
    <string name="recharge_guide">Recharge Guide</string>
    <string name="click_here_for_making_payment">Click Here For Making Payment</string>
    <string name="note_in_the_slve_enterprises_payment_platform_login_with_the_same_mobile_number_used_in_ai_di_app_to_get_the_amount_credited_to_your_recharge_wallet_instantly">Note: In the SLVE Enterprises Payment Platform, login with the same mobile number used in \'Ai-Di\' App, to get the amount credited to your recharge wallet instantly.</string>
    <string name="refer_and_earn_2000_generated_id_s_helps_to_achieve_monthly_target">Refer and earn 2000 generated ID\'s \n( Helps To Achieve Monthly Target)</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="todo">TODO</string>
    <string name="total_codes_income">Total Codes Income</string>
    <string name="send_otp">Send OTP</string>
    <string name="total_refer_earnings">Total Refer Earnings</string>
    <string name="total_id_earnings">Total ID Earnings</string>
    <string name="withdrawal_timing_10_am_to_6_pm_on_working_days_only">Withdrawal Timing 10 am to 6 pm on working days only.</string>
    <string name="your_withdrawal_will_be_paid_within_24hrs_from_the_time_of_withdrawal_done">Your Withdrawal Will Be Paid Within 24hrs From The Time Of Withdrawal Done.</string>
    <string name="faq">FAQ</string>
    <string name="open">Open</string>
    <string name="notification">Notification</string>
    <string name="you_have_new_notification">You have new notification</string>
    <string name="read">Read</string>
    <string name="zoom">Zoom</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="forgot_password">Forgot password</string>
    <string name="phone_no">Phone No</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="confiram">Confiram</string>
    <string name="apply_leave">Apply leave</string>
    <string name="select_date_of_leave">Select Date of Leave</string>
    <string name="dob">DOB</string>
    <string name="leave_date">Leave date</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="reason">Reason</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="submit">Submit</string>
    <string name="mobile_number">Mobile number</string>
    <string name="register_date">Register date</string>
    <string name="advanced_plan_600_nstandard_plan_400_nbasic_plan_300_ntrail_plan_5">Premium Plan - ₹ 2000\nAdvanced Plan - ₹ 600\nStandard Plan - ₹ 400\nBasic Plan - ₹ 300\nTrail plan - ₹ 5</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="my_refer">My Refer</string>
    <string name="unlock_work_from_home_customer_support_job_monthly_salary_up_to_12000"><![CDATA[By Referring more friends to Aidi App, Get Slab bonus & also opportunity to work as a customer support executive, from the comfort of your home in Aidi company - Salary Upto ₹ 12000 PM.]]></string>
    <string name="charges_99_for_application">Charges ₹ 99 For Application</string>
    <string name="slabs">Slabs</string>
    <string name="bonus">Bonus</string>
    <string name="work_from_home_customer_support_job_up_to_12000_pm_salary">Work From Home - Customer Support Job up to 12000 PM Salary</string>
    <string name="note_1_complete_refers_slabs">
    <![CDATA[Note:\n\u20031. Complete Refers Slabs In 2 Months To Avail The Benefit & Job.\n\u20032. Bonus can be claimed only if you have applied for the job by paying ₹99.]]>
</string>
    <string name="job_role_of_customer_support">Job role of customer support</string>
    <string name="s_no">S.No</string>
    <string name="registered_date">Registered date</string>
    <string name="total_income">Total Income</string>
    <string name="my_level_income">My Level Income</string>
</resources>