<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:padding="@dimen/_10sdp">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_toEndOf="@id/ibBack"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/apply_leave"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>

    <!-- Loading View -->
    <LinearLayout
        android:id="@+id/llWaiting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlToolbar"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorColor="@color/primaryColor"
            app:indicatorSize="@dimen/_20sdp"
            app:trackThickness="@dimen/_2sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/please_wait"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <!-- Notification RecyclerView -->
    <RelativeLayout
        android:id="@+id/rlNotificationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlToolbar">

        <LinearLayout
            android:id="@+id/llApplyLeaveOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leave_date"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular" />


            <EditText
                android:id="@+id/edLeaveDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_bg"
                android:editable="false"
                android:hint="@string/select_date_of_leave"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reason"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/_10sdp" />


            <EditText
                android:id="@+id/edReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_bg"
                android:hint="@string/enter_reason"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:minLines="3"
                android:maxLines="3"
                android:lines="3"
                android:gravity="start" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/submit"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                android:background="@drawable/button_bg"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/llApplyLeaveOption"
            android:id="@+id/rvLeaveList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"/>
    </RelativeLayout>
</RelativeLayout>