<!-- res/layout/dialog_recharge_custom.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <!-- Title and Close Button Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recharge_guide"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium" />

        <ImageButton
            android:id="@+id/btClose"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/remove_ic"
            android:contentDescription="Close"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <!-- Guide Text -->
    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_click_on_below_link_complete_the_payment"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/gray"
        android:fontFamily="@font/poppins_medium" />

    <!-- Payment Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btRechargePayment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/button_bg"
        android:text="@string/click_here_for_making_payment"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:textAllCaps="false"
        app:backgroundTint="@null" />

    <!-- Watch Demo Text -->
    <TextView
        android:id="@+id/btWatchDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/watch_demo"
        android:textColor="@color/logo_blue"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium" />

    <!-- Note Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/note_in_the_slve_enterprises_payment_platform_login_with_the_same_mobile_number_used_in_ai_di_app_to_get_the_amount_credited_to_your_recharge_wallet_instantly"
        android:textSize="@dimen/_8sdp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/deep_orange_500" />
</LinearLayout>
