<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity"
    android:background="@color/BGColorBlue">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_25sdp">


        <LinearLayout
            android:padding="@dimen/_10sdp"
            android:background="@drawable/bg_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_no"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/EtPhoneNo"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ed_bg"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="Autofill,TextFields" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSendOtp"
                    android:layout_width="@dimen/_85sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:text="@string/send_otp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:textAllCaps="false"
                    app:backgroundTint="@null"
                    android:background="@drawable/enamble_disable_button"/>

            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/verify_otp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/EtVerifyOtp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ed_bg"
                    android:hint="@string/otp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:inputType="number"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="Autofill" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnVerifyOtp"
                    android:layout_width="@dimen/_85sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:text="@string/verify"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:textAllCaps="false"
                    app:backgroundTint="@null"
                    android:background="@drawable/enamble_disable_button"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/EtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                tools:ignore="Autofill"
                app:endIconMode="password_toggle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/EtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_bg"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                tools:ignore="Autofill"
                app:endIconMode="password_toggle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignup"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/confiram"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                android:background="@drawable/enamble_disable_button"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>